# 2025-wm-summer-school-data

./: .gitignore  README.md  generate_cmod_dataset.ipynb  inspect_dataset.ipynb  pyproject.toml  scan_for_cmod_failed_shots.ipynb
shotlists/: cmod_shotlist.txt  disruption_shotlist.txt  disruption_shotlist_failed.txt  disruption_shotlist_flat_top.txt  disruption_shotlist_ramp_down.txt  disruption_shotlist_ramp_up.txt  identified_failed_shots.txt  non_disruptive_shotlist.txt
